# awq

./: AGENTS.md  Cargo.toml  README.md  deny.toml  lys  lys.yml  syl
.github/workflows/: rust.yml
locales/en-US/: messages.ftl
locales/fr_FR/: messages.ftl
shells/: lys.fish
src/: branch.rs  commit.rs  crypto.rs  db.rs  email.rs  import.rs  lib.rs  lysrc.rs  main.rs  shell.rs  tags.rs  todo.rs  tree.rs  utils.rs  vcs.rs  web.rs
src/vcs/: branch.rs  commit.rs  db.rs  init.rs  mod.rs  todo.rs  tree.rs
