[package]
name = "awq"
version = "0.0.0"
edition = "2024"
description = "A modern vcs"
authors = ["Saigo Ekitae"]
repository = "https://github.com/kognitara/awq"
license = "AGPL-3.0"
readme = "README.md"
categories = ["development-tools"]

[dependencies]
blake3 = "1.8.5"
clap = "4.6.1"
crossterm = "0.29.0"
lettre = "0.11.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }

